--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -67,6 +68,7 @@
           <!-- <a href="#"><i class="bi bi-twitter-x"></i></a> -->
           <a href="https://www.youtube.com/@aksh_it49"><i class="bi bi-youtube"></i></a>
           <a href="https://www.instagram.com/vintage_wine49/"><i class="bi bi-instagram"></i></a>
+          <a href="https://drive.google.com/drive/folders/1sOQZOQ-uLnRREkhShvV4QxFv48qgj_-t?usp=drive_link"><i class="fa-brands fa-google-drive"></i></a>
           <a href="https://github.com/AKSHIT-TRIPATHI"><i class="bi bi-github"></i></a>
           <a href="https://www.linkedin.com/in/akshittri49/"><i class="bi bi-linkedin"></i></a>
         </div>
@@ -83,6 +85,7 @@
       <div class="social-links d-flex justify-content-center">
         <a href="https://www.youtube.com/@aksh_it49"><i class="bi bi-youtube"></i></a>
         <a href="https://www.instagram.com/vintage_wine49/"><i class="bi bi-instagram"></i></a>
+        <a href="https://drive.google.com/drive/folders/1sOQZOQ-uLnRREkhShvV4QxFv48qgj_-t?usp=drive_link"><i class="fa-brands fa-google-drive"></i></a>
         <a href="https://github.com/AKSHIT-TRIPATHI"><i class="bi bi-github"></i></a>
         <a href="https://www.linkedin.com/in/akshittri49/"><i class="bi bi-linkedin"></i></a>
       </div>
