--- a/contact.html
+++ b/contact.html
@@ -177,6 +177,7 @@
       <div class="social-links d-flex justify-content-center">
         <a href="https://www.youtube.com/@aksh_it49"><i class="bi bi-youtube"></i></a>
         <a href="https://www.instagram.com/vintage_wine49/"><i class="bi bi-instagram"></i></a>
+        <a href="https://drive.google.com/drive/folders/1sOQZOQ-uLnRREkhShvV4QxFv48qgj_-t?usp=drive_link"><i class="fa-brands fa-google-drive"></i></a>
         <a href="https://github.com/AKSHIT-TRIPATHI"><i class="bi bi-github"></i></a>
         <a href="https://www.linkedin.com/in/akshittri49/"><i class="bi bi-linkedin"></i></a>
       </div>
