--- a/resume.html
+++ b/resume.html
@@ -198,6 +198,7 @@
     <div class="container">
       <h3 class="sitename">Let's connect !!</h3>
       <p>Always eager to collaborate on exciting projects and contribute to the advancement of technology. Let's connect and explore opportunities to innovate together!</p>
+      <p>Click on G-Drive icon to download my resume!!</p>
       <div class="social-links d-flex justify-content-center">
         <a href="https://www.youtube.com/@aksh_it49"><i class="bi bi-youtube"></i></a>
         <a href="https://www.instagram.com/vintage_wine49/"><i class="bi bi-instagram"></i></a>
