--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/bg1.png" alt="" data-aos="fade-in">
+      <img src="assets/img/COVEr.jpg" alt="" data-aos="fade-in">
 
       <div class="container" data-aos="zoom-out" data-aos-delay="100">
         <h2>Akshit tripathi.</h2>
